--- a/src/components/pages/state/state-grade.module.scss
+++ b/src/components/pages/state/state-grade.module.scss
@@ -16,7 +16,7 @@
 
 .icon {
   display: inline-block;
-  @include margin(16, right);
+  @include margin(8, right);
   width: 23px;
 }
 
